
SUBDIRS = scripts src tests

clean:
	cd libs && rm libblitwizard*.a
	cd libs && rm libimglib.a
install:
	@echo "Install is currently not supported."
	@echo "Please copy bin/blitwizard and templates/ into the project folders"
	@echo "where you wish to use blitwizard, and run it with bin/blitwizard."
	@echo "If you are on Microsoft Windows, copy Run-blitwizard aswell and"
	@echo "use that to run blitwizard."
